@@ -1,5 +1,5 @@
 /*
- * $Id: c_controlmisc.c,v 1.28 2006-02-26 16:52:36 guerra000 Exp $
+ * $Id: c_controlmisc.c,v 1.29 2006-02-26 17:49:53 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -116,7 +116,9 @@
 #include "tchar.h"
 #include "../include/oohg.h"
 
-PHB_SYMB hb_dynsymSymbol( PHB_DYNS );
+#ifdef HB_ITEM_NIL
+   #define hb_dynsymSymbol( pDynSym )        ( ( pDynSym )->pSymbol )
+#endif
 
 PHB_SYMB *s_Symbols = NULL;
 
